--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
 	<!-- Portfolio Section
    ================================================== -->
-	<section id="portfolio">
+<!-- 	<section id="portfolio">
 
 		<div class="row section-intro">
    		<div class="col-twelve">
@@ -630,7 +630,7 @@
 
    	</div> <!-- /portfolio-content --> 
 		
-	</section> <!-- /portfolio --> 
+	</section> <!-- /portfolio -->  -->
 
 	
 	
