--- a/index.html
+++ b/index.html
@@ -329,14 +329,14 @@
    			<p class="lead">These Projects have helped me develop my Skills at Undergraduate Level and understand the Industry better.</p>
 
    		</div>   		
-   	</div> <!-- /section-intro--> 
+   	</div> <!-- /section-intro-->  -->
 
-   	<div class="row portfolio-content">
+<!--    	<div class="row portfolio-content">
 
-   		<div class="col-twelve">
+   		<div class="col-twelve"> -->
 
    			<!-- portfolio-wrapper -->
-	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
+<!-- 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 		
 		<div class="bgrid folio-item">
 	               <div class="item-wrap">
@@ -352,9 +352,9 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        </div> <!-- /folio-item -->
+	        </div> <!-- /folio-item --> -->
              
-		<div class="bgrid folio-item">
+<!-- 		<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/showworld_app.png" alt="Show World Film Directory Application">
 	                  <a href="#modal-07" class="overlay">             		                  
@@ -368,9 +368,9 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        </div> <!-- /folio-item -->
+	        </div> <!-- /folio-item --> -->
 
-                <div class="bgrid folio-item">
+<!--                 <div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/showworld_website.png" alt="Show World Film Directory Website">
 	                  <a href="#modal-06" class="overlay">             		                  
@@ -384,9 +384,9 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        	</div> <!-- /folio-item -->
+	        	</div> <!-- /folio-item --> -->
 
-	         	<div class="bgrid folio-item">
+<!-- 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/hospipro.jpg" alt="HospiPro">
 	                  <a href="#modal-05" class="overlay">	                  	           
@@ -400,10 +400,10 @@
 	                     </div>                    
 	                  </a>
 	               </div>	               
-	        		</div> <!-- /folio-item -->
+	        		</div> <!-- /folio-item --> -->
 
 	        		<div class="bgrid folio-item">
-	               <div class="item-wrap">
+<!-- 	               <div class="item-wrap">
 	               	<img src="images/portfolio/buttonpress.jpg" alt="Button Press">
 	               	<a href="#modal-04" class="overlay">              		                  
 	                     <div class="folio-item-table">
@@ -416,9 +416,9 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->
+	        		</div> <!-- /folio-item --> -->
 
-	            <div class="bgrid folio-item">
+<!-- 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/guestin.JPG"alt="GuestIn">
 	                  <a href="#modal-03" class="overlay">             		                  
@@ -432,9 +432,9 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        	</div> <!-- /folio-item -->
+	        	</div> <!-- /folio-item --> -->
 
-	            <div class="bgrid folio-item">
+<!-- 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/Snake_game Pic.png" alt="snakegame">
 	                  <a href="#modal-02" class="overlay">                  	                 
@@ -448,9 +448,9 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        	</div> <!-- /folio-item -->     
+	        	</div> <!-- /folio-item -->      -->
 
-	        	<div class="bgrid folio-item">
+<!-- 	        	<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/portfolio_website.JPG" alt="Portfolio">
 	                  <a href="#modal-01" class="overlay">             		                  
@@ -464,11 +464,11 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        	</div> <!-- /folio-item -->
+	        	</div> <!-- /folio-item --> -->
 
 	            <!-- modal popups - begin
 	            ============================================================= -->
-		<div id="modal-08" class="popup-modal slider mfp-hide">	
+<!-- 		<div id="modal-08" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
 				     		<img src="images/portfolio/modals/m-guestinme_app.png" alt="GuestInMe App" />
@@ -483,8 +483,8 @@
 			            <a href="https://onelink.to/guestinme">App</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
-                </div> <!-- /modal-08 -->
-                <div id="modal-07" class="popup-modal slider mfp-hide">	
+                </div> <!-- /modal-08 --> -->
+<!--                 <div id="modal-07" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
 				     		<img src="images/portfolio/modals/m-showworld_app.png" alt="Show World Film Directory App" />
@@ -499,9 +499,9 @@
 			            <a href="https://play.google.com/store/apps/details?id=com.showworld.showworldfilmdirectory">App</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
-                </div> <!-- /modal-07 -->
+                </div> <!-- /modal-07 --> -->
 
-                <div id="modal-06" class="popup-modal slider mfp-hide">
+<!--                 <div id="modal-06" class="popup-modal slider mfp-hide">
 				     	<div class="media">
 				     		<img src="images/portfolio/modals/m-showworld_website.png" alt="Show World Film Directory Website" />
 				     	</div>      	
@@ -516,8 +516,8 @@
 			            <a href="https://showworlddirectory.com">Visit</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
-                </div> <!-- /modal-06 -->
-
+                </div> <!-- /modal-06 --> -->
+<!-- 
 	            <div id="modal-05" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
@@ -536,9 +536,9 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				</div>
+				</div> -->
 			 <!-- /modal-05 -->
-
+<!-- 
 		<div id="modal-04" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
@@ -557,9 +557,9 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-                </div> <!-- /modal-04 -->
+                </div> <!-- /modal-04 --> -->
 
-                <div id="modal-03" class="popup-modal slider mfp-hide">	
+<!--                 <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
 				     		<img src="images/portfolio/modals/m-guestin.JPG" alt="GuestIn" />
@@ -578,9 +578,9 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-                </div> <!-- /modal-03 -->
+                </div> <!-- /modal-03 --> -->
 
-                <div id="modal-02" class="popup-modal slider mfp-hide">	
+<!--                 <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
 				     		<img src="images/Snake_game Pic.png" alt="Snake Game" />
@@ -598,9 +598,9 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-                </div> <!-- /modal-02 -->
+                </div> <!-- /modal-02 --> -->
 
-                <div id="modal-01" class="popup-modal slider mfp-hide">	
+<!--                 <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
 				     		<img src="images/portfolio/modals/m-portfolio_website.JPG" alt="Portfolio" />
@@ -618,19 +618,19 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-                </div> <!-- /modal-01 -->
+                </div> <!-- /modal-01 --> -->
 
 
 				   <!-- modal popups - end
 	            ============================================================= -->
+<!-- 
+	         </div> <!-- /portfolio-wrapper -->  -->
 
-	         </div> <!-- /portfolio-wrapper --> 
+<!--    		</div>  <!-- /twelve -->    -->
 
-   		</div>  <!-- /twelve -->   
-
-   	</div> <!-- /portfolio-content --> 
+<!--    	</div> <!-- /portfolio-content -->  -->
 		
-	</section> <!-- /portfolio -->  -->
+<!-- 	</section> <!-- /portfolio -->  --> -->
 
 	
 	
