--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 	               </div>	               
 	        		</div> <!-- /folio-item --> -->
 
-	        		<div class="bgrid folio-item">
+<!-- 	        		<div class="bgrid folio-item"> -->
 <!-- 	               <div class="item-wrap">
 	               	<img src="images/portfolio/buttonpress.jpg" alt="Button Press">
 	               	<a href="#modal-04" class="overlay">              		                  
