--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <ul class="intro-social">
             <li><a href="https://www.linkedin.com/in/karan-modi-428486208/"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="https://www.instagram.com/karan._.2408/"><i class="fa fa-instagram"></i></a></li>
-            <li><a href="https://github.com/karnmodi"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://github.com/karan2408-code"><i class="fa fa-github"></i></a></li>
             <!-- <li><a href="https://www.youtube.com/channel/UCgzz4Kd1YpzxJOkrhf5U_7A/"><i class="fa fa-youtube"></i></a></li> -->
             <li><a href="https://www.hackerrank.com/karanmodi3282"><i class="fa fa-code"></i></a></li>
             <!-- <li><a href="https://play.google.com/store/apps/dev?id=6991863212111988524"><i class="fa fa-play"></i></a></li>
@@ -179,7 +179,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<!-- <span><a href="#">https://alisolanki.github.io/Portfolio/</a></span> -->
+   					<span><a href="#">https://karnmodi.github.io/Portfolio/</a></span>
    				</li>
                     <li>
                         <strong>Email:</strong>
@@ -420,13 +420,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/guestin.JPG"alt="GuestIn">
+	               	<img src="images/portfolio/Whatsapp Bulk Messages.png"alt="Whatsapp Bulk Messages">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-                                <h3 class="folio-title">GuestIn</h3>	     					    
+                                <h3 class="folio-title">Whatsapp Bulk Messages</h3>	     					    
                                 <span class="folio-types">
-                                    Website Development
+                                    Just Learning
                                 </span>		     		
                             </div> 	                      	
 	                     </div>                    
@@ -562,19 +562,19 @@
                 <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-guestin.JPG" alt="GuestIn" />
+				     		<img src="images/portfolio/Whatsapp Bulk Messages.png" alt="Whatsapp Bulk Messages" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>GuestIn</h4>		      
-					      <p><strong>GuestIn</strong>, your one stop solution to get listed in the guestlist
-							of any Club or Bar all over <strong>Mumbai</strong>.</p>
+					      <h4>Whatsapp Bulk Messages</h4>		      
+					      <p><strong>Whatsapp Bulk Messages</strong>, your one stop solution to send Messages to Hundreds
+							of People on one click <strong></strong></p>
 
-					      <div class="categories">Website Design</div>			               
+					      <div class="categories">Message Sender</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://github.com/alisolanki/GuestIn">GitHub</a>
+			            <a href="https://github.com/karnmodi/Bulk_Whatsapp_Message">GitHub</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -820,7 +820,7 @@
 
 					<li><a href="https://www.linkedin.com/in/karan-modi-428486208/"><i class="fa fa-linkedin"></i></a></li>
             		<li><a href="https://www.instagram.com/karan._.2408/"><i class="fa fa-instagram"></i></a></li>
-            		<li><a href="https://github.com/karnmodi"><i class="fa fa-github"></i></a></li>
+            		<li><a href="https://github.com/karan2408-code"><i class="fa fa-github"></i></a></li>
             		<!-- <li><a href="https://www.youtube.com/channel/UCgzz4Kd1YpzxJOkrhf5U_7A/"><i class="fa fa-youtube"></i></a></li> -->
             		<li><a href="https://www.hackerrank.com/karanmodi3282"><i class="fa fa-code"></i></a></li>
             		<!-- <li><a href="https://play.google.com/store/apps/dev?id=6991863212111988524"><i class="fa fa-play"></i></a></li>
