--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
 	        	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/portfolio_website.JPG" alt="Portfolio">
+	               	<img src="images/portfolio/Portfolio .png" alt="Portfolio">
 	                  <a href="#modal-01" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -603,18 +603,18 @@
                 <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-portfolio_website.JPG" alt="Portfolio" />
+				     		<img src="images/portfolio/Portfolio .png" alt="Portfolio" />
 				     	</div>      	
 
 					   <div class="description-box">
 					      <h4>Portfolio</h4>		      
-					      <p>My Portfolio Website made using HTML, CSS, JavaScript, PHP.</p>
+					      <p>My Portfolio Website made using HTML, CSS, JavaScript.</p>
 
 					      <div class="categories">Website Development</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://alisolanki.gq">Details</a>
+			            <a href="https://github.com/karnmodi/Portfolio">Github</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
