--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                     <p class="intro-position">
                         <span>Developer</span>
-                        <span>Starter</span>
+                        <span>Explorer</span>
                         <span>Learner</span>
                     </p>
 
@@ -235,13 +235,13 @@
 
    	</div>
 
-   	<!-- <div class="row button-section">
+   	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="Karan Modi – Growth Marketer _ Web3.pdf" title="Download CV (Growth)" class="button button-primary">Download CV (Growth)</a>
-   			<a href="Karan Modi – Solidity _ Smart Contract Developer.pdf" title="Download CV (Solidity)" class="button button-primary">Download CV (Solidity)</a>
+   			<a href="Resume.pdf" title="Download Resume" class="button button-primary">Download Resume</a>
+   			<!-- <a href="Karan Modi – Solidity _ Smart Contract Developer.pdf" title="Download CV (Solidity)" class="button button-primary">Download CV (Solidity)</a> -->
    		</div>   		
-   	</div> -->
+   	</div>
 
    </section> <!-- /process-->    
 
