--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span><a href="#">https://karnmodi.github.io/Portfolio/</a></span>
+   					<span><u><a href="#">https://karnmodi.github.io/Portfolio/</a></u></span>
    				</li>
                     <li>
                         <strong>Email:</strong>
-                        <span>karanmodi3282@gmail.com</span>
-                        <span>karnm0963@gmail.com</span>
+                        <span>  <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSPFdNDWlFDzgrqsSGQJSQSMgXXjHxxrJDQqwGKsZNBrVHwJQVWgXKmCrKMvPWtjCVMltpTg"><span style="color: gray;"><u>karanmodi3282@gmail.com</u> </span> </a>  </span> <br>
+   						<a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJNqLXFTnHtVNRfvzCgDDvCDpbKSZwpWQdLszcXqHXWTXPZfNDsLRkDgrxDccqbMbtkxPSq"><span style="color: gray;"><u>karnm0963@gmail.com	</u> </span></a>
                     </li>
 
    			</ul> <!-- /info-list -->
@@ -818,8 +818,9 @@
 
    			<h5>Email Me At</h5>
 
-   			<p>karanmodi3282@gmail.com<br>
-			   karnm0963@gmail.com		     
+   			<p><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSPFdNDWlFDzgrqsSGQJSQSMgXXjHxxrJDQqwGKsZNBrVHwJQVWgXKmCrKMvPWtjCVMltpTg"><span style="color: white;"><u>karanmodi3282@gmail.com</u> </span></a><br>
+   			<a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJNqLXFTnHtVNRfvzCgDDvCDpbKSZwpWQdLszcXqHXWTXPZfNDsLRkDgrxDccqbMbtkxPSq"><span style="color: white;"><u>karnm0963@gmail.com	</u> </span></a><br>
+					     
 			</p>
 
    		</div>
