--- a/index.html
+++ b/index.html
@@ -183,8 +183,11 @@
    				</li>
                     <li>
                         <strong>Email:</strong>
-                        <span>  <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSPFdNDWlFDzgrqsSGQJSQSMgXXjHxxrJDQqwGKsZNBrVHwJQVWgXKmCrKMvPWtjCVMltpTg"><span style="color: gray;"><u>karanmodi3282@gmail.com</u> </span> </a>  </span> <br>
-   						<a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJNqLXFTnHtVNRfvzCgDDvCDpbKSZwpWQdLszcXqHXWTXPZfNDsLRkDgrxDccqbMbtkxPSq"><span style="color: gray;"><u>karnm0963@gmail.com	</u> </span></a>
+                        <p> <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSPFdNDWlFDzgrqsSGQJSQSMgXXjHxxrJDQqwGKsZNBrVHwJQVWgXKmCrKMvPWtjCVMltpTg"><span style="color: gray;"><u>karanmodi3282@gmail.com</u> </span></a> 
+
+							<a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJNqLXFTnHtVNRfvzCgDDvCDpbKSZwpWQdLszcXqHXWTXPZfNDsLRkDgrxDccqbMbtkxPSq"><span style="color: gray;"><u>karnm0963@gmail.com</u> </span></a>
+									  
+						 </p>
                     </li>
 
    			</ul> <!-- /info-list -->
@@ -354,21 +357,21 @@
 			</div>
 	    </div> <!-- /folio-item -->
              
-		<!-- <div class="bgrid folio-item">
+		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/showworld_app.png" alt="Show World Film Directory Application">
+	               	<img src="images/portfolio/Sticky Note.png" alt="Sticky Notes">
 	                  <a href="#modal-07" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Show World App</h3>	     					    
+	                     		<h3 class="folio-title">Sticky Notes</h3>	     					    
                                     <span class="folio-types">
-                                        Mobile App Development
+                                        Web App Development
                                     </span>		     		
 		     				</div> 	                      	
 	                     </div>                    
 	                  </a>
 	               </div>
-	        </div>  -->
+	        </div> 
 			<!-- /folio-item -->
 
 
@@ -503,22 +506,23 @@
 				<!-- /modal-08 -->
 
 
-                <!-- <div id="modal-07" class="popup-modal slider mfp-hide">	
+                <div id="modal-07" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-showworld_app.png" alt="Show World Film Directory App" />
+				     		<img src="images/portfolio/Sticky Note.png" alt="Sticky Notes" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Show World Film Directory App</h4>		      
-					      <p>Show World Film Directory App made using Flutter and Firebase.</p>
-					      <div class="categories">Flutter App Development</div>			               
+					      <h4>Sticky Note </h4>		      
+					      <p>Sticky Note made by mostly JAVASCRIPT</p>
+					      <div class="categories">Web App Development</div>			               
 					   </div>
 			         <div class="link-box">
-			            <a href="https://play.google.com/store/apps/details?id=com.showworld.showworldfilmdirectory">App</a>
+			            <a href="https://github.com/karnmodi/StickyNote">GITHUB</a>
+			            <a href="https://karnmodi.github.io/StickyNote/">WEBSITE</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
-                </div>  -->
+                </div> 
 				<!-- /modal-07 -->
 
 
