--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <ul class="intro-social">
             <li><a href="https://www.linkedin.com/in/karan-modi-428486208/"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="https://www.instagram.com/karan._.2408/"><i class="fa fa-instagram"></i></a></li>
-            <li><a href="https://github.com/karan2408-code"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://github.com/karnmodi"><i class="fa fa-github"></i></a></li>
             <!-- <li><a href="https://www.youtube.com/channel/UCgzz4Kd1YpzxJOkrhf5U_7A/"><i class="fa fa-youtube"></i></a></li> -->
             <li><a href="https://www.hackerrank.com/karanmodi3282"><i class="fa fa-code"></i></a></li>
             <!-- <li><a href="https://play.google.com/store/apps/dev?id=6991863212111988524"><i class="fa fa-play"></i></a></li>
@@ -857,7 +857,7 @@
 
 					<li><a href="https://www.linkedin.com/in/karan-modi-428486208/"><i class="fa fa-linkedin"></i></a></li>
             		<li><a href="https://www.instagram.com/karan._.2408/"><i class="fa fa-instagram"></i></a></li>
-            		<li><a href="https://github.com/karan2408-code"><i class="fa fa-github"></i></a></li>
+            		<li><a href="https://github.com/karnmodi"><i class="fa fa-github"></i></a></li>
             		<!-- <li><a href="https://www.youtube.com/channel/UCgzz4Kd1YpzxJOkrhf5U_7A/"><i class="fa fa-youtube"></i></a></li> -->
             		<li><a href="https://www.hackerrank.com/karanmodi3282"><i class="fa fa-code"></i></a></li>
             		<!-- <li><a href="https://play.google.com/store/apps/dev?id=6991863212111988524"><i class="fa fa-play"></i></a></li>
