--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
    <!-- about section
    ================================================== -->
-   <section id="About">
+   <section id="about">
 
    	<div class="row section-intro">
    		<div class="col-twelve">
