--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
 
 					<div class="link-box">
 		   			<a href="https://github.com/karnmodi/Portfolio">Github</a>
+					<a href="https://karnmodi.github.io/Portfolio/">Website</a>
 					 <a href="#" class="popup-modal-dismiss">Close</a>
 					</div>	
                 </div> 
