--- a/index.html
+++ b/index.html
@@ -275,12 +275,30 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Bachelor's Degree</h3>
-	   					<p>July 2020 - Present</p>
+	   					<p>July 2022 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4><a href="https://silveroakuni.ac.in/">Silver Oak University</a></h4>
-	   					<p>Currently pursuing B.Tech. Degree specialization in Computer Science (CSE) at Silver Oak University, Gota - Ahmedabad.</p>
+	   					<h4><a href="https://silveroakuni.ac.in/">De Montfort University</a></h4>
+	   					<p>Currently pursuing the specialization in Computer Science (CSE) at De Montfort University, Leicester - UK.</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+				
+				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-briefcase"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Bachelor's Degree</h3>
+	   					<p>Nov 2020 - Oct 2021</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4><a href="https://silveroakuni.ac.in/">Silver Oak Univerty</a></h4>
+	   					<p> completed my firt year of Engineering in Computer Science at Silver Oak University, Gota - Ahmedabad, Gujarat.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -294,12 +312,12 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Schooling</h3>
-	   					<p>2007 - 2020</p>
+	   					<p>2007 - Aug 2020</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4><a href="http://www.diwanballubhai.in/">Diwan-Ballubhai School, Kankariya</a></h4>
-	   					<p>Completed my Schooling & SSC - HSC through Gujarat Board at Diwan-Ballubhai School, Kankariya - Ahmedabad.</p>
+	   					<p>Completed my Schooling & SSC - HSC through Gujarat Board at Diwan-Ballubhai School, Kankariya - Ahmedabad, Gujarat.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
