--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4><a href="https://silveroakuni.ac.in/">Silver Oak Univerty</a></h4>
-	   					<p> completed my firt year of Engineering in Computer Science at Silver Oak University, Gota - Ahmedabad, Gujarat.</p>
+	   					<p> completed my first year of Engineering in Computer Science at Silver Oak University, Gota - Ahmedabad, Gujarat.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
