--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-                <p>A Computer Science and Engineering (CSE) B.Tech. student from Silver Oak Institue of Technology with excellent academic background and diverse skillset.                       Experienced in Web, Flutter and Android Development.
+                <p>A Computer Science and Engineering (CSE) student from De Montfort University with excellent academic background and diverse skillset.                       Experienced in Web, Flutter and Android Development.
                    I am well versed with Python, Kotlin, Java, C++, Flutter and basics of JavaScript, CSS & HTML.</p>
 
    			<ul class="info-list">
@@ -177,11 +177,12 @@
    				</li>
                     <li>
                         <strong>Email:</strong>
-                        <p> <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSPFdNDWlFDzgrqsSGQJSQSMgXXjHxxrJDQqwGKsZNBrVHwJQVWgXKmCrKMvPWtjCVMltpTg"><span style="color: gray;"><u>karanmodi3282@gmail.com</u> </span></a> 
+                        <p> 
+				<a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSPFdNDWlFDzgrqsSGQJSQSMgXXjHxxrJDQqwGKsZNBrVHwJQVWgXKmCrKMvPWtjCVMltpTg"><span style="color: gray;"><u>karanmodi3282@gmail.com</u> </span></a> 
 
-							<a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJNqLXFTnHtVNRfvzCgDDvCDpbKSZwpWQdLszcXqHXWTXPZfNDsLRkDgrxDccqbMbtkxPSq"><span style="color: gray;"><u>karnm0963@gmail.com</u> </span></a>
+				<a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJNqLXFTnHtVNRfvzCgDDvCDpbKSZwpWQdLszcXqHXWTXPZfNDsLRkDgrxDccqbMbtkxPSq"><span style="color: gray;"><u>karnm0963@gmail.com</u> </span></a>
 									  
-						 </p>
+			</p>
                     </li>
 
    			</ul> <!-- /info-list -->
