--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </script>
 
    <!-- favicons ================================================== -->
-	<link rel="icon" type="image/png" href="images/Website Logo.jpg">
+	<link rel="icon" type="image/png" href="images/My project.png">
 
 </head>
 
