--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 			 
 		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/Calculator.jpeg" alt="Calculator">
+	               	<img src="images/portfolio/Calculator.jpeg" alt="Calculator">
 	                  <a href="#modal-01" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
