--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 			 
 		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/Calculator.jpeg" alt="Calculator">
+	               	<img src="images/portfolio/Calculator.png" alt="Calculator">
 	                  <a href="#modal-01" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -534,7 +534,7 @@
 		<div id="modal-01"class="popup-modal slider mfp-hide">	
 
 					<div class="media">
-						<img src="images/portfolio/Calculator.jpeg" alt="Calculator" />
+						<img src="images/portfolio/Calculator.png" alt="Calculator" />
 					</div>      	
 
 		  			<div class="description-box">
