--- a/index.html
+++ b/index.html
@@ -703,8 +703,8 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            Maninagar, Ahmedabad<br>
-            380008 India
+            Leicester, United Kingdom <br>
+            LE4 
             </p>
 
    		</div>
