--- a/index.html
+++ b/index.html
@@ -390,11 +390,11 @@
 			 
 		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/Products_Page.png"alt="Invoice And Billing Software // Products_Page">
+	               	<img src="images/Invoice Page.png"alt="Invoice And Billing Software // Products_Page">
 	                  <a href="#modal-04" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-                                <h3 class="folio-title">Invoice And Billing Desktop Software</h3>	     					    
+                                <h3 class="folio-title">Invoice And Billing Software</h3>	     					    
                                 <span class="folio-types">
                                     Desktop Software
                                 </span>		     		
@@ -505,7 +505,7 @@
 		<div id="modal-04" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/Invoice Page.png" alt="Invoice And Billing Software" />
+				     		<img src="images/Products_Page.png" alt="Invoice And Billing Software" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -518,7 +518,7 @@
 
 			         <div class="link-box">
 			            <a href="https://github.com/karnmodi/Invoice_Billing_Software">GitHub</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
+				    <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
                 </div> 
