--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
                     <li>
 <!--                         <div class="progress percent95"><span>95%</span></div> -->
-                        <strong>Flutter | Dart</strong>
+                        <strong>.Net with C# | Visual Studio</strong>
                     </li>
 
                     <li>
@@ -219,7 +219,7 @@
 
                     <li>
 <!--                         <div class="progress percent75"><span>75%</span></div> -->
-                        <strong>Android Studio | Java </strong>
+                        <strong>Android Studio </strong>
                     </li>
 
 		   			<li>
