Resume Update index.html

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="Resume.pdf" title="Download Resume" class="button button-primary">Download Resume</a>
+   			<a href="RESUME.pdf" title="Download Resume" class="button button-primary">Download Resume</a>
    			
    		</div>   		
    	</div>
