Profile Update index.html

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/Profile Photo.jpg" alt="Karan Modi Picture">
+   				<img src="images/Profile.jpg" alt="Karan Modi Picture">
 
    				<p class="lead">"Lad with a <font color="#01aeff">million</font> dreams."</p>
    			</div>   			
