--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
 
    				<img src="images/Profile.jpg" alt="Karan Modi Picture">
 
-   				<p class="lead">"Lad with a <font color="#01aeff">million</font> dreams."</p>
+   				<p class="lead">"Lad with a <font color="#01aeff">million</font> dreams. <br> Through trials and under sun's gleams, <br>
+I'll conquer mountains, cross vast extremes."</p>
    			</div>   			
 
    		</div>   		
