--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    ================================================== -->
    <meta charset="utf-8">
 	<title>Karan Modi | Portfolio Website | Developer</title>
-	<meta name="description" content="Karan Modi is a Developer and is a B.Tech student at Silver Oak Institute and Technology">  
+	<meta name="description" content="Karan Modi is a Developer and is an Undergraduate international student at De Montfort University, Leicester, United Kingdom.">  
 	<meta name="author" content="Karan Falgun Modi">
 
     <meta name="keywords" content="Karan Modi, Ahmedabad, developer, web developer, android developer"/>
