--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ I'll conquer mountains, cross vast extremes."</p>
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="RESUME.pdf" title="Download Resume" class="button button-primary">Download Resume</a>
+   			<a href="Karan Falgun Modi RESUME .docx" title="Download Resume" class="button button-primary">Download Resume</a>
    			
    		</div>   		
    	</div>
