--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@ I'll conquer mountains, cross vast extremes."</p>
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span><u><a href="#">https://karnmodi.github.io/Portfolio/</a></u></span>
+   					<span><u><a href="#">https://karanmodi.com/</a></u></span>
    				</li>
                     <li>
                         <strong>Email:</strong>
                         <p> 
-				<a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSPFdNDWlFDzgrqsSGQJSQSMgXXjHxxrJDQqwGKsZNBrVHwJQVWgXKmCrKMvPWtjCVMltpTg"><span style="color: gray;"><u>karanmodi3282@gmail.com</u> </span></a> 
-
+				<a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSPFdNDWlFDzgrqsSGQJSQSMgXXjHxxrJDQqwGKsZNBrVHwJQVWgXKmCrKMvPWtjCVMltpTg"><span style="color: gray;"><u>karanmodi3282@gmail.com</u> </span></a><br> 
+					
 				<a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJNqLXFTnHtVNRfvzCgDDvCDpbKSZwpWQdLszcXqHXWTXPZfNDsLRkDgrxDccqbMbtkxPSq"><span style="color: gray;"><u>karnm0963@gmail.com</u> </span></a>
 									  
 			</p>
@@ -281,7 +281,7 @@ I'll conquer mountains, cross vast extremes."</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4><a href="https://silveroakuni.ac.in/">De Montfort University</a></h4>
+	   					<h4><a href="https://www.dmu.ac.uk/home.aspx">De Montfort University</a></h4>
 	   					<p>Currently pursuing the specialization in Computer Science (CSE) at De Montfort University, Leicester - UK.</p>
 	   				</div>
 
