--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@ I'll conquer mountains, cross vast extremes."</p>
    					<strong>Fullname:</strong>
    					<span>Karan Falgun Modi</span>
    				</li>
-   				<li>
-   					<strong>Birth Date:</strong>
-   					<span>August 24th, 2003</span>
-   				</li>
+<!--    				<li>
+   					<strong></strong>
+   					<span></span>
+   				</li> -->
    				<li>
    					<strong>Website:</strong>
    					<span><u><a href="#">https://karanmodi.com/</a></u></span>
@@ -205,7 +205,7 @@ I'll conquer mountains, cross vast extremes."</p>
                 <ul class="skill-bars">
 					<li>
 <!--                         <div class="progress percent85"><span>90%</span></div> -->
-						<strong>Python</strong>
+						<strong>Java | OOPS</strong>
 					</li>
 
                     <li>
