--- a/index.html
+++ b/index.html
@@ -373,13 +373,13 @@ I'll conquer mountains, cross vast extremes."</p>
              
 		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/Sticky Note.png" alt="Sticky Notes">
+	               	<img src="images/portfolio/FYMS--Java-OOPS.png" alt="FYMS--Java-OOPS">
 	                  <a href="#modal-07" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Sticky Notes</h3>	     					    
+	                     		<h3 class="folio-title">FYMS--Java-OOPS</h3>	     					    
                                     <span class="folio-types">
-                                        Web App Development
+                                        Java Desktop App Development
                                     </span>		     		
 		     				</div> 	                      	
 	                     </div>                    
@@ -407,21 +407,21 @@ I'll conquer mountains, cross vast extremes."</p>
 				<!-- /folio-item -->
 
 
-	            <div class="bgrid folio-item">
+	           <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/Whatsapp Bulk Messages.png"alt="Whatsapp Bulk Messages">
+	               	<img src="images/portfolio/Sticky Note.png" alt="Sticky Notes">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-                                <h3 class="folio-title">Whatsapp Bulk Messages</h3>	     					    
-                                <span class="folio-types">
-                                    Just Learning
-                                </span>		     		
-                            </div> 	                      	
+	                     		<h3 class="folio-title">Sticky Notes</h3>	     					    
+                                    <span class="folio-types">
+                                        Web App Development
+                                    </span>		     		
+		     				</div> 	                      	
 	                     </div>                    
 	                  </a>
 	               </div>
-	        	</div> 
+	        </div> 
 				<!-- /folio-item -->
 
 
@@ -486,17 +486,16 @@ I'll conquer mountains, cross vast extremes."</p>
                 <div id="modal-07" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/Sticky Note.png" alt="Sticky Notes" />
+				     		<img src="images/portfolio/FYMS--Java-OOPSs.png" alt="FYMS--Java-OOPS" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Sticky Note </h4>		      
-					      <p>Sticky Note made by mostly JAVASCRIPT</p>
-					      <div class="categories">Web App Development</div>			               
+					      <h4>FYMS--Java-OOPS </h4>		      
+					      <p>FYMS - Final Year Module Selection using JAVA Object Oriented Design and Development.In which User can enter their personal Information and select an Optional Module from the List of uncomplusory module. Apart from that, If in case, that selected Optional Module is not available in any reason then one Reserve module can be selected be taught. And It will give Personal Details Overview, Selected Modules for BLOCK 1, 2, 3 Overview. and Reserved Module Overvirw.All the data can be stored in a .dat file in the project file and in the specialized location anywhere in the PC.User can eaily load all the Saved data in the Application using the Load button. and popup the List of the saved files and can be opened by double click.</p>
+					      <div class="categories">Java App Development</div>			               
 					   </div>
 			         <div class="link-box">
-			            <a href="https://github.com/karnmodi/StickyNote">GITHUB</a>
-			            <a href="https://karnmodi.github.io/StickyNote/">WEBSITE</a>
+			            <a href="https://github.com/karnmodi/FYMS--Java-OOPS">GITHUB</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
                 </div> 
@@ -527,26 +526,22 @@ I'll conquer mountains, cross vast extremes."</p>
 
 
                
-
                 <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/Whatsapp Bulk Messages.png" alt="Whatsapp Bulk Messages" />
+				     		<img src="images/portfolio/Sticky Note.png" alt="Sticky Notes" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Whatsapp Bulk Messages</h4>		      
-					      <p><strong>Whatsapp Bulk Messages</strong>, your one stop solution to send Messages to Hundreds
-							of People on one click <strong></strong></p>
-
-					      <div class="categories">Message Sender</div>			               
+					      <h4>Sticky Note </h4>		      
+					      <p>Sticky Note made by mostly JAVASCRIPT</p>
+					      <div class="categories">Web App Development</div>			               
 					   </div>
-
 			         <div class="link-box">
-			            <a href="https://github.com/karnmodi/Bulk_Whatsapp_Message">GitHub</a>
+			            <a href="https://github.com/karnmodi/StickyNote">GITHUB</a>
+			            <a href="https://karnmodi.github.io/StickyNote/">WEBSITE</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
-
+			         </div>
                 </div> 
 				<!-- /modal-03 -->
 
