--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
    	</div> <!-- /intro-content --> 
 
         <ul class="intro-social">
-            <li><a href="https://www.linkedin.com/in/karan-modi-428486208/"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/karanfmodi/"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="https://www.instagram.com/karan._.2408/"><i class="fa fa-instagram"></i></a></li>
             <li><a href="https://github.com/karnmodi"><i class="fa fa-github"></i></a></li>
             <li><a href="https://www.hackerrank.com/karanmodi3282"><i class="fa fa-code"></i></a></li>
@@ -787,7 +787,7 @@ I'll conquer mountains, cross vast extremes."</p>
 
                 <ul class="footer-social">
 
-					<li><a href="https://www.linkedin.com/in/karan-modi-428486208/"><i class="fa fa-linkedin"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/karanfmodi/"><i class="fa fa-linkedin"></i></a></li>
             		<li><a href="https://www.instagram.com/karan._.2408/"><i class="fa fa-instagram"></i></a></li>
             		<li><a href="https://github.com/karnmodi"><i class="fa fa-github"></i></a></li>
             		<li><a href="https://www.hackerrank.com/karanmodi3282"><i class="fa fa-code"></i></a></li>
@@ -797,8 +797,8 @@ I'll conquer mountains, cross vast extremes."</p>
 
       	<div class="col-six tab-full">
 	      	<div class="copyright">
-		        	<span>© Copyright 2023 </span> 
-		        	<span>Design by <a href="https://www.linkedin.com/in/karan-modi-428486208/">Karan Falgun Modi</a></span>	         	
+		        	<span>© Copyright 2024 </span> 
+		        	<span>Design by <a href="https://www.linkedin.com/in/karanfmodi/">Karan Falgun Modi</a></span>	         	
 		         </div>		                  
 	      	</div>
 
