--- a/index.html
+++ b/index.html
@@ -740,8 +740,7 @@ I'll conquer mountains, cross vast extremes."</p>
    			<h5>Where to find me</h5>
 
    			<p>
-            Leicester, United Kingdom <br>
-            LE4 
+            Leicester, United Kingdom.
             </p>
 
    		</div>
@@ -769,8 +768,10 @@ I'll conquer mountains, cross vast extremes."</p>
 
    			<h5>Call Me At</h5>
 
-			<p>Phone: Telegram (<a href="https://t.me/Karan_2408"><span style="color: yellow;"><u>Karan Modi</u> </span></a>)
-			</p>
+			//<p>Phone: Telegram (<a href="https://t.me/Karan_2408"><span style="color: yellow;"><u>Karan Modi</u> </span></a>)
+			//</p>
+			<p>Phone: +447867064191
+			p>
    		</div>
    		
    	</div> <!-- /contact-info -->
