--- a/index.html
+++ b/index.html
@@ -767,11 +767,11 @@ I'll conquer mountains, cross vast extremes."</p>
    			</div>
 
    			<h5>Call Me At</h5>
-
-			//<p>Phone: Telegram (<a href="https://t.me/Karan_2408"><span style="color: yellow;"><u>Karan Modi</u> </span></a>)
-			//</p>
+<!-- 
+			<p>Phone: Telegram (<a href="https://t.me/Karan_2408"><span style="color: yellow;"><u>Karan Modi</u> </span></a>)
+			</p> -->
 			<p>Phone: +447867064191
-			p>
+			</p>
    		</div>
    		
    	</div> <!-- /contact-info -->
