--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@ I'll conquer mountains, cross vast extremes."</p>
 <!-- 
 			<p>Phone: Telegram (<a href="https://t.me/Karan_2408"><span style="color: yellow;"><u>Karan Modi</u> </span></a>)
 			</p> -->
-			<p>Phone: <span style="color: white;"><u>+447867064191</u> </span>
+			<p>Phone: <span style="color: white;">+447867064191</span>
 			</p>
    		</div>
    		
