--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
 
    			<div class="intro-info">
 
-   				<img src="images/Profile.jpg" alt="Karan Modi Picture">
+<!--    				<img src="images/Profile.jpg" alt="Karan Modi Picture"> -->
+				<video class="w-32 rounded-full" muted="" playsinline="" autoplay="" loop="" src="/Facial Animation.mp4">
+					<source data-src="/Facial Animation.mp4">
+				</video>
 
    				<p class="lead">"Lad with a <font color="#01aeff">million</font> dreams. <br> Through trials and under sun's gleams, <br>
 I'll conquer mountains, cross vast extremes."</p>
