--- a/index.html
+++ b/index.html
@@ -147,10 +147,11 @@
    			<div class="intro-info">
 
 <!--    				<img src="images/Profile.jpg" alt="Karan Modi Picture"> -->
+				<span style = "width: 8rem;">
 				<video class="w-32 rounded-full" muted="" playsinline="" autoplay="" loop="" src="/Facial Animation.mp4">
 					<source data-src="/Facial Animation.mp4">
 				</video>
-
+				</span>
    				<p class="lead">"Lad with a <font color="#01aeff">million</font> dreams. <br> Through trials and under sun's gleams, <br>
 I'll conquer mountains, cross vast extremes."</p>
    			</div>   			
