--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
    			<div class="intro-info">
 
 <!--    				<img src="images/Profile.jpg" alt="Karan Modi Picture"> -->
-				<video style="width: 8rem; border-radius: 50%;" muted playsinline autoplay loop src="/Facial Animation.mp4">
+				<video muted playsinline autoplay loop src="/Facial Animation.mp4">
   					<source src="/Facial Animation.mp4">
 				</video>
 
