--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>					
-						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
+						<li><a class="smoothscroll"  href="#contact" title="">Contact Me</a></li>	
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
