--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@ I'll conquer mountains, cross vast extremes."</p>
 
    		<div class="col-twelve">
             
-<!-- form -->
+<!-- form 
 <form name="form" id="contactForm" method="POST" action="https://formspree.io/f/xnqwraal">
       			<fieldset>
                     <div class="form-field">
@@ -719,6 +719,7 @@ I'll conquer mountains, cross vast extremes."</p>
 
 	</fieldset>
 </form>
+-->
 
             <!-- contact-warning -->
 <div id="message-warning">            	
